# riscv_trace_control_interface

./: .gitignore  CMakeLists.txt  IMmioDevice.h  MmioBus.h  README.md  TraceBytesConnect.h  TraceControlRegisters.h  TraceControllerInterface.h  TraceEncoder.h  TraceFunnel.h  TraceRamSink.h  TraceSystem.h  main.cpp  notes_coding.txt  riscv_tci_block_diagram.drawio
doc/: notes_coding.txt  riscv_tci_block_diagram.drawio
src/: IHwAccess.h  IMmioDevice.h  MmioBus.h  ProbeHwAccess.h  TraceBytesConnect.h  TraceControllerInterface.h  TraceEncoder.h  TraceFunnel.h  TraceRamSink.h  TraceSystem.h  main.cpp
tests/: gtest_tci.cpp
